2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/*.c: misc documentation updates/gtk-doc fixes

	* libsoup/soup-server.c: finally start documenting this properly.

	* libsoup/soup-status.h (SoupStatusClass): kill this, since
	soup_message_add_status_class_handler() is gone now.

	* libsoup/soup-status.c (soup_status_get_phrase): Update docs to
	explain that you probably don't want to use this.

	* libsoup/soup-misc.h (SOUP_SSL_ERROR, SoupSSLError): Move these
	here, since soup-ssl.h isn't installed.

	* docs/references: start updating this...

2008-01-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.c (soup_buffer_new)
	(soup_message_body_append): Reorder the arguments to match
	soup_message_set_request/response, so it's not confusing.

	* libsoup/soup-message.c (wrote_chunk): remove the "chunk" arg
	from the signal, as it turns out to be *in*convenient, since most
	callers use this signal to mean "need another chunk", so they want
	it to have the same prototype as "wrote_headers", which means
	"need first chunk".

2008-01-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-domain.c: add documentation
	(soup_auth_domain_set_filter): take a GDestroyNotify, for better
	bindability

	* libsoup/soup-auth-domain-basic.c:
	* libsoup/soup-auth-domain-digest.c: Add documentation. Replace
	authentication signals with more-easily-bindable authentication
	callbacks (with GDestroyNotifys).
	(soup_auth_domain_digest_evil_check_password): Add this for the
	benefit of code that depends on being able to do the equivalent
	of the old soup_server_auth_check_passwd().

2008-01-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.h (SoupMessageBody): add data and
	length parameters like SoupBuffer, to make this easier for callers
	to use.

	* libsoup/soup-message-body.c (soup_message_body_append)
	(soup_message_body_append_buffer)
	(soup_message_body_truncate): Update body->length
	(soup_message_body_flatten): Fill in body->data (and NUL-terminate